# jarvis

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
src/audio/: audio_capture.cpp  audio_capture.h  vad.h
src/llm/: text_inference.cpp  text_inference.h
src/pipeline/: assistant.cpp  assistant.h
src/transcribe/: transcribe.cpp  transcribe.h
src/tts/: tts.cpp  tts.h
